# mingling

./: ABOUT-NIGHTLY.md  CHANGELOG.md  Cargo.toml  README.md
dev_tools/scripts/: doc.ps1  doc.sh
docs/: README.md  _sidebar.md  index.html
docs/_zh_CN/: README.md  _sidebar.md  index.html
docs/_zh_CN/pages/: 1-creating-your-first-program.md  2-implementing-fallbacks.md  3-parsing-complex-arguments.md  4-implementing-help-display.md  5-implementing-completion.md
docs/pages/: 1-creating-your-first-program.md  1-creating-your-first-program_zh_CN.md  2-implementing-fallbacks.md  2-implementing-fallbacks_zh_CN.md  3-parsing-complex-arguments.md  4-implementing-help-display.md  5-implementing-completion.md
docs/res/: guide.txt
examples/: test-examples.toml
examples/example-dispatch-tree/src/: main.rs
examples/example-exit-code/src/: main.rs
examples/example-repl/: Cargo.toml
examples/example-repl/src/: main.rs
mingling/: Cargo.toml  README.md
mingling/src/: example_docs.rs  lib.rs  parser.rs
mingling/src/parser/: args.rs  picker.rs  test.rs
mingling/src/res/: exit_code.rs
mingling_core/: Cargo.toml  README.md
mingling_core/src/: program.rs
mingling_core/src/asset/: comp.rs  global_resource.rs
mingling_core/src/asset/chain/: error.rs
mingling_core/src/program/: collection.rs  error.rs  exec.rs  hook.rs  once_exec.rs  repl_exec.rs  single_instance.rs
mingling_core/src/program/exec/: error.rs
mingling_core/src/program/repl_exec/: res.rs
mingling_core/src/renderer/general/: error.rs
mingling_core/src/tester/: chain_process_tester.rs
mingling_macros/: Cargo.toml  README.md
mingling_macros/src/: chain.rs  completion.rs  dispatch_tree_gen.rs  dispatcher.rs  dispatcher_clap.rs  enum_tag.rs  groupped.rs  help.rs  lib.rs  node.rs  pack.rs  program_setup.rs  render.rs  renderer.rs
mling/: Cargo.toml
mling/res/: version.txt
mling/src/: cli.rs
mling/src/cli/: install.rs  list.rs  namespace_mgr.rs  read.rs
