[workspace]
resolver = "2"
members = ["mingling", "mingling_core", "mingling_macros", "mling"]
exclude = [
    "examples/example-async",
    "examples/example-basic",
    "examples/example-completion",
    "examples/example-dispatch-tree",
    "examples/example-exit-code",
    "examples/example-general-renderer",
    "examples/example-picker",
    "dev_tools",
]

[workspace.dependencies]
just_fmt = "0.1.2"
just_template = "0.1.3"
once_cell = "1.21.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1.1.2"
ron = "0.12.1"

dirs = "6"

syn = { version = "2.0", features = ["full", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"

colored = "3.1.1"
tokio = { version = "1", features = ["full"] }

log = "0.4"
env_logger = "0.11"

[workspace.package]
version = "0.1.8"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/catilgrass/mingling"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
