[package]
name = "mingling_core"
version = "0.1.7"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Core of the mingling library"
repository = "https://github.com/catilgrass/mingling"

[features]
nightly = []
default = []
async = []

clap = []
comp = ["dep:just_template"]
debug = ["dep:log", "dep:env_logger"]
general_renderer = [
    "dep:serde",
    "dep:ron",
    "dep:serde_json",
    "dep:serde_yaml",
    "dep:toml",
]

[dependencies]
just_fmt = "0.1.2"
thiserror = "2"

once_cell = "1.21.4"

# comp
just_template = { version = "0.1.3", optional = true }

# general_renderer
serde = { version = "1.0", features = ["derive"], optional = true }
ron = { version = "0.12.1", optional = true }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "1.1.2", optional = true }

# debug
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }
