[package]
name = "mingling_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core of the mingling library"
repository.workspace = true

[features]
nightly = []
default = []
async = []
builds = []

dispatch_tree = []
general_renderer = ["dep:serde"]
ron_serde_fmt = ["dep:ron"]
json_serde_fmt = ["dep:serde_json"]
yaml_serde_fmt = ["dep:serde_yaml"]
toml_serde_fmt = ["dep:toml"]

repl = []

clap = []
comp = ["dep:just_template"]
debug = ["dep:log", "dep:env_logger"]

[dependencies]
just_fmt.workspace = true
once_cell.workspace = true

# comp
just_template = { workspace = true, optional = true }

# general_renderer
serde = { workspace = true, optional = true }
ron = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

# debug
log = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }
