[package]
name = "mingling_macros"
version = "0.1.8"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/catilgrass/mingling"
description = "Macros of the mingling library"

[lib]
proc-macro = true

[features]
nightly = []
default = []
async = []

clap = []
comp = []
general_renderer = []
repl = []

[dependencies]
syn = { version = "2.0", features = ["full", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"

just_fmt = "0.1.2"
once_cell = "1.21"
